Re applied google code style for java